петља не готиви ћирилицу

--- a/колоквијуми/кол23.md
+++ b/колоквијуми/кол23.md
@@ -79,16 +79,16 @@ print(a)
 
 ```python
 N, T = map(int, input().split())
-куповине = [tuple(map(int, input().split())) for _ in range(N)] + [(T+1, 0)]
+kupovine = [tuple(map(int, input().split())) for _ in range(N)] + [(T+1, 0)]
  
-преостало, свеукупно, дан_последњи = 0, 0, 0
-for d, b in куповине:
-    свеукупно += b
-    преостало -= d - дан_последњи
-    дан_последњи = d
-    преостало = max(преостало, 0) + b
+preostalo, sveukupno, dan_poslednji = 0, 0, 0
+for d, b in kupovine:
+    sveukupno += b
+    preostalo -= d - dan_poslednji
+    dan_poslednji = d
+    preostalo = max(preostalo, 0) + b
  
-print(свеукупно - преостало)
+print(sveukupno - preostalo)
 
 ```
 
