Ажурирани задаци са десетих вежби.

--- a/вежбе/вежбе10.md
+++ b/вежбе/вежбе10.md
@@ -1,13 +1,74 @@
 # Основи програмирања: вежбе - X недеља
 
 ## Задатак 1
-Напиши функцију који исцртава квадрат од карактера *.
-Дужина странице квадрата је н.
+Написати функциjу коjа штампа таблицу множења.
 <details markdown='block'>
 <summary>Решење </summary>
 
 ```python
-def kvadrat(n):
+def tablicaMnozenja():
+    for i in range(1, 11):
+        for j in range(1, 11):
+            print(i * j, end=' ')
+        print()
+
+#tablicaMnozenja()
+```
+</details>
+
+## Задатак 2
+Написати функциjу коjа за унети природан броj $n$ исписуjе просте
+броjеве коjи су мањи од $n$.
+<details markdown='block'>
+<summary>Решење </summary>
+
+```python
+from math import sqrt,ceil
+n=int(input())
+for i in range(2,n):
+    for j in range(2,ceil(sqrt(i))+1):#i-1
+        if (i%j==0):
+            break
+        if j>=sqrt(i):#i-1
+            print(i)
+```
+</details>
+
+## Задатак 3
+Написати функциjу коjа штампа савршене броjеве у опсегу од $1$ до $100$.
+
+Броj $n$ се сматра савршеним ако jе збир свих његових делилаца (не
+укључуjући $n$) jеднак самом броjу $n$.
+
+<details markdown='block'>
+<summary>Решење </summary>
+
+```python
+def savrseniBrojevi():
+    n = 2
+
+    while n <= 100:
+        x_sum = 0
+    
+        for i in range(1, n):
+            if n % i == 0:
+                x_sum += i
+        if x_sum == n:
+            print('Savršeni broj:', n)
+        n += 1
+        
+#savrseniBrojevi()
+```
+</details>
+
+## Задатак 4
+Напиши функцију који исцртава квадрат од карактера *.
+Дужина странице квадрата је н.
+<details markdown='block'>
+<summary>Решење - први начин</summary>
+
+```python
+def kvadrat():
     """
     Напиши функцију који исцртава квадрат од карактера *.
     Дужина странице квадрата је н.
@@ -18,10 +79,233 @@ def kvadrat(n):
             print('*', sep='', end='')
     print()                 # prelazimo u novi red
 
+#kvadrat()
 ```
 </details>
 
-## Задатак 2
+<details markdown='block'>
+<summary>Решење - други начин</summary>
+
+```python
+def kvadrat_2():
+    n=int(input())
+    for i in range(n):
+        print(n*"*")
+
+#kvadrat_2()
+```
+</details>
+
+## Задатак 5
+Написати функциjу коjа исцртава странице квадрата, као и његову
+диjагоналу.
+Дужина странице квадрата jе $n$ и учитава се са стандардног улаза.
+<details markdown='block'>
+<summary>Решење</summary>
+
+```python
+n=int(input())
+def dijagonala_kvadrat(n):
+    for i in range (n):
+        for j in range (n):
+            if (i==n-1) or (i==0) or (j==0) or (j==n-1):
+                print('*', end='')
+                continue
+            if (i==j):
+                print('#', end='')
+                continue
+            print(" ",end='')
+        print()
+dijagonala_kvadrat(n)
+```
+</details>
+
+## Задатак 6
+Написати функциjу коjа враћа низ чиjи се чланови рачунаjу као $i \times j$,
+где $i$ узима вредност од $1$ до $n$ (укључуjући $n$), а $j$ узима вредност од $1$
+до $m$ (укључуjући $m$), при чему важи да су $n$ и $m$ природни броjеви
+већи од $1$.
+<details markdown='block'>
+<summary>Решење - угнеждене петље</summary>
+
+```python
+def nizProizvoda(n, m):
+    noviNiz = []
+    for i in range(1, n+1):
+        for j in range(1, m+1):
+            noviNiz.append(i*j)
+    
+    return noviNiz
+
+#print(nizProizvoda(3, 5))
+```
+</details>
+
+<details markdown='block'>
+<summary>Решење - List Comprehension</summary>
+
+```python
+def nizProizvoda2(n, m):
+    noviNiz = [i*j for i in range(1, n+1) for j in range(1, m+1)]
+    
+    return noviNiz
+
+#print(nizProizvoda2(3, 5))
+```
+</details>
+
+## Задатак 7
+Написати функциjу коjа враћа матрицу чиjи се чланови рачунаjу као $i \times j$,
+где $i$ узима вредност од $1$ до $n$ (укључуjући $n$) и представља
+редове матрице, а $j$ узима вредност од $1$ до $m$ (укључуjући $m$) и
+представља колоне матрице.
+
+Важи да су $n$ и $m$ природни броjеви већи од $1$.
+<details markdown='block'>
+<summary>Решење - угнеждене петље</summary>
+
+```python
+def matricaProizvoda(n, m):
+    matrica = []
+    for i in range(1, n+1):
+        redMatrice = []
+        for j in range(1, m+1):
+            redMatrice.append(i*j)
+        matrica.append(redMatrice)
+    
+    return matrica
+
+#print(matricaProizvoda(3, 5))
+```
+</details>
+
+<details markdown='block'>
+<summary>Решење - List Comprehension</summary>
+
+```python
+def matricaProizvoda2(n, m):
+    matrica = [[i*j for j in range(1, m+1)] for i in range(1, n+1)]
+    
+    return matrica
+
+#print(matricaProizvoda2(3, 5))
+```
+</details>
+
+## Задатак 8
+Написати функциjу коjа за унете природне броjеве $n$ и $m$ штампа
+следеће:
+### За $m = 3$ и $n = 5$: 
+~~~
+[[0, 1, 2], [1, 2, 3], [2, 3, 4], [3, 4, 5], [4, 5, 6]]
+~~~
+
+<details markdown='block'>
+<summary>Решење</summary>
+
+```python
+n, m = map(int,input().split())
+niz=[]
+
+for i in range(n):
+    niz_tmp=[]
+    for j in range(i,i+m):
+        niz_tmp.append(j)
+    niz.append(niz_tmp)
+
+#niz=[[j for j in range(i,i+m)] for i in range(n)]
+print(niz)
+```
+</details>
+
+## Задатак 9
+У првом реду стандардног улаза омогућити учитавање два природна броjа - $n$ и $m$.
+Даље, извршити унос целоброjних елемената у матрицу димензиjа
+$n \times m$, а потом одштампати унету матрицу.
+<details markdown='block'>
+<summary>Решење</summary>
+
+```python
+br_vrsta, br_kolona = map(int, input().split())
+matrica=[]
+for i in range(br_vrsta):
+    vrsta=list(map(int,input().split()))
+    matrica.append(vrsta)
+#print(matrica)
+
+for i in range(br_vrsta):
+    for j in range(br_kolona):
+        print(matrica[i][j], end=" ") #"{:3d}".format(matrica[i][j])
+    #print()
+    print("\n")
+
+
+#for vrsta in matrica:
+#   print (" ".join(map(str,vrsta)))
+```
+</details>
+
+## Задатак 10
+Написати програм коjи за унети природан броj $n$ штампа следеће:
+### За $n = 6$: 
+~~~
+123456
+234561
+345612
+456123
+561234
+612345
+~~~
+<details markdown='block'>
+<summary>Решење </summary>
+
+```python
+n=int(input())
+niz=[i for i in range(1,n+1)]
+for i in range(n):
+    for j in range(n):
+        print(niz[j],end='')
+    print()
+    niz=niz[1:]+[niz[0]]
+```
+</details>
+
+## Задатак 11
+Написати функциjу коjа прима два низа природних броjева, а штампа
+производе уређених парова $(x, y)$, где су $x$ вредности из првог низа, а
+$y$ вредности из другог низа. Како jе операциjа множења комутативна
+$(a \times b = b \times a)$, потребно jе избећи поjављивање дупликата (случаj када
+се вредности $x$ и $y$ налазе и у првом и у другом низу). Резултате
+штампати сортиране по $x$ у растућем поретку, у следећем формату:
+~~~
+x ∗ y = z
+~~~
+где jе $z$ производ вредности $x$ и $y$.
+<details markdown='block'>
+<summary>Решење</summary>
+
+```python
+def mnozenjeNizova(n, m):
+    prvi = set(n)
+    drugi = set(m)
+    poseceni = []
+    for i in prvi:
+        for j in drugi:
+            if j in prvi and i in drugi and ((i, j) in poseceni or (j, i) in poseceni):
+                continue
+            print(i, '*', j, '= ', i * j)
+            poseceni.append((i, j))
+            poseceni.append((j, i))
+
+            
+#n = [4, 6, 1, 9, 0]
+#m = [2, 6, 4, 0, 12, 4]
+
+#mnozenjeNizova(n, m)
+```
+</details>
+
+## Задатак 12
 Напиши функцију који ће исписати све подречи дате речи и то у растућем редоследу почетних позиција и растућем редоследу дужине.
 <details markdown='block'>
 <summary>Решење </summary>
@@ -38,7 +322,7 @@ def podreci(s):
 ```
 </details>
 
-## Задатак 3
+## Задатак 13
 Дата је реч и природан број n. Напиши функцију који исписује све њене подречи дужине n.
 <details markdown='block'>
 <summary>Решење </summary>
@@ -54,7 +338,7 @@ def podreci_duzine_n(s,n):
 ```
 </details>
 
-## Задатак 4
+## Задатак 14
 Напиши функцију који исписује све подречи које се могу добити читањем слова дате речи кренувши од неког слова, у круг, назад до тог слова.
 <details markdown='block'>
 <summary>Решење </summary>
