--- a/вежбе/вежбе12.md
+++ b/вежбе/вежбе12.md
@@ -1,163 +1,193 @@
 # Основи програмирања: вежбе - XII недеља
 
-## Задатак 1
-Написати функцију која ће рачунати траг дате матрице.
-Траг матрице је дефинисан као збир елемената на главној дијагонали.
-Подразумевано је дата матрица квадратна матрица.
+## Алгоритми сортирања
+
+### Сортирање избором - Selection Sort
+
 <details markdown='block'>
-<summary>Решење - O(n^2) </summary>
+<summary>Имплементација коришћењем угнеждене while петље </summary>
 
 ```python
-def trag_matrice(matrica):
-    suma = 0
-    for i in range(len(matrica)):
-        for j in range(len(matrica[0])):
-            if i == j:
-                suma += matrica[i][j]
-    return suma
+def sortiranjeIzborom(N):
+    for i in range(len(N) - 1):
+        minIndeks = i
+        minVrednost = N[i]
+        j = i + 1
+        while j < len(N):
+           if minVrednost > N[j]:
+              minIndeks = j
+              minVrednost = N[j]
+           j = j + 1
+        privremeno = N[i]
+        N[i] = N[minIndeks]
+        N[minIndeks] = privremeno
 ```
 </details>
 
 <details markdown='block'>
-<summary>Решење - O(n) </summary>
+<summary>Имплементација коришћењем угнеждене for петље </summary>
 
 ```python
-def trag_matrice_alternativno(matrica):
-    suma = 0
-    for i in range(len(matrica)):
-        suma += matrica[i][i]
-    return suma
-```
-</details>
-
-## Задатак 2
-Написати функцију која транспонује дату квадратну матрицу.
-<details markdown='block'>
-<summary>Решење </summary>
-
-```python
-def transponovanje_matrice(matrica):
-    for i in range(len(matrica)):
-        for j in range(i+1,len(matrica[0])):
-            matrica[i][j],matrica[j][i] = matrica[j][i],matrica[i][j]
-```
-</details>
-
-## Задатак 3
-Написати функцију која исписује чланове матрице у спиралном реду.
-<details markdown='block'>
-<summary>Решење </summary>
-
-```python
-def spiralOrder(matrix):
-        output = []
-
-        leftCol, rightCol = 0, len(matrix[0])
-        topRow, bottomRow = 0, len(matrix)
-
-        while leftCol < rightCol and topRow < bottomRow:
-
-            for i in range(leftCol,rightCol):
-                output.append(matrix[topRow][i])
-
-            topRow += 1
-            
-            for i in range(topRow,bottomRow):
-                output.append(matrix[i][rightCol-1])
-
-            rightCol-=1 
-
-            if not(leftCol < rightCol and topRow < bottomRow):
-                break
-
-            for i in range(rightCol-1,leftCol-1,-1):
-                output.append(matrix[bottomRow-1][i])
-
-            bottomRow-=1
-
-            for i in range(bottomRow-1,topRow-1,-1):
-                output.append(matrix[i][leftCol])
-
-            leftCol+=1
-
-        return output
-
-```
-</details>
-
-## Задатак 4
-Написати функцију која ротира матрицу за 90 степени у негативном математичком смеру(смеру казаљке на сату).
-<details markdown='block'>
-<summary>Решење </summary>
-
-```python
-def rotate(matrix):
-	left, right = 0, len(matrix[0])-1
-
-        while left < right:
-            bottom, top =right , left
-
-            for i in range(right-left):
-
-                top_right = matrix[top+i][right]
-                matrix[top+i][right] = matrix[top][left+i]
-
-                bottom_right = matrix[bottom][right-i]
-                matrix[bottom][right-i] = top_right
-
-
-                bottom_left = matrix[bottom-i][left]
-                matrix[bottom-i][left] = bottom_right
-
-                matrix[top][left+i] = bottom_left
-
-            left+=1
-            right-=1
-    
-```
-</details>
-
-## Задатак 5
-Написати функцију која мења матрицу тако да, ако је члан матрице једнак 0, тада се сви чланове реда и колоне у коме је тај члан мењају у 0.
-<details markdown='block'>
-<summary>Решење - O(1) меморијска комплексност</summary>
-
-```python
-def setZeroes(matrix):
-        set_first_row_zero = False
+def sortiranje_izborom(niz):
+    for i in range(len(niz)):
+        for j in range(i+1, len(niz)):
+            if niz[i] > niz[j]:
+                niz[i], niz[j] = niz[j], niz[i]
                 
-        rows, cols = len(matrix), len(matrix[0])
-        for r in range(rows):
-            for c in range(cols):
-                if matrix[r][c] ==0:
-                    matrix[0][c]=0
-                    
-                    if r==0:
-                        set_first_row_zero = True
-                    else:
-                        matrix[r][0] = 0
-                        
-        for r in range(1,rows):
-            for c in range(1,cols):
-                if matrix[r][0] == 0 or matrix[0][c] ==0:
-                    matrix[r][c] =0
-                    
-        if matrix[0][0] == 0:
-            for r in range(rows):
-                matrix[r][0]=0
-        
-        if set_first_row_zero:
-            for c in range(cols):
-                matrix[0][c]=0 
+#niz = [5, 2, 0, 4, 7, 9, 8, -3, 12]
+#sortiranje_izborom(niz)
+#print(niz)
 ```
 </details>
 
-## Бинарна претрага
+
+### Сортирање мехуром - Bubble Sort
+
 <details markdown='block'>
-<summary>Итеративно </summary>
+<summary>Имплементација коришћењем while и for петље </summary>
 
 ```python
-def binarna_pretraga(niz, x):
+def sortiranjeMehurom(N):
+    zamena = False
+    while not zamena:
+        zamena = True
+        for j in range(1, len(N)):
+            if N[j-1] > N[j]:
+               zamena = False
+               privremeno = N[j]
+               N[j] = N[j-1]
+               N[j-1] = privremeno
+```
+</details>
+
+<details markdown='block'>
+<summary>Имплементација коришћењем for петљи </summary>
+
+```python
+def sortiranje_mehurom(niz):
+    zamena = False
+    for n in range(len(niz)-1, 0, -1):
+        for i in range(n):
+            if niz[i] > niz[i+1]:
+                zamena = True
+                niz[i], niz[i+1] = niz[i+1], niz[i]
+        
+        if not zamena:
+            return
+ 
+#niz = [39, 12, 18, 85, 72, 10, 2, 18]
+ 
+#sortiranje_mehurom(niz)
+#print(niz)
+```
+</details>
+
+
+### Сортирање уметањем - Insertion Sort
+
+<details markdown='block'>
+<summary>Имплементација </summary>
+
+```python
+def sortiranjeUmetanjem(N):
+    for i in range(1, len(N)):
+        trenutno = N[i]
+        j = i - 1
+        while j >= 0 and trenutno < N[j]:
+           N[j+1] = N[j]
+           j = j - 1
+        N[j+1] = trenutno
+```
+</details>
+
+
+### Сортирање спајањем - Merge Sort
+
+<details markdown='block'>
+<summary>Имплементација </summary>
+
+```python
+import operator
+
+def spajanje(leva, desna, poredi):
+    rezultat, i, j = [], 0, 0
+    while i < len(leva) and j < len(desna):
+        if poredi(leva[i], desna[j]):
+            rezultat.append(leva[i])
+            i = i + 1
+        else:
+            rezultat.append(desna[j])
+            j = j + 1
+    
+    while (i < len(leva)):
+        rezultat.append(leva[i])
+        i = i + 1
+    
+    while (j < len(desna)):
+        rezultat.append(desna[j])
+        j = j + 1
+    
+    return rezultat
+
+def sortiranje_spajanjem(N, poredi = operator.lt):
+    if len(N) < 2:
+        return N[:]
+    
+    sredina = int(len(N)/2)
+    leva = sortiranje_spajanjem(N[:sredina], poredi)
+    desna = sortiranje_spajanjem(N[sredina:],poredi)
+    
+    return spajanje(leva, desna, poredi)
+
+#niz = [5, 2, 0, 4, 7, 9, 8, -3, 12]
+#print(niz)
+#print(sortiranje_spajanjem(niz))
+```
+</details>
+
+
+## Алгоритми претраге
+
+### Линеарна претрага
+<details markdown='block'>
+<summary>Имплементација - итеративно </summary>
+
+```python
+def linearna_pretraga_iterativno(niz, x):
+    for i in range(len(niz)):
+        if niz[i] == x:
+            return i
+    
+    return -1
+
+#niz = [39, 12, 18, 85, 72, 10, 2, 18]
+#print(linearna_pretraga_iterativno(niz, 85))
+```
+</details>
+
+<details markdown='block'>
+<summary>Имплементација - рекурзивно </summary>
+
+```python
+def linearna_pretraga_rekurzivno(niz, trenutniIndeks, vrednost):
+    if trenutniIndeks == -1:
+        return -1
+    if niz[trenutniIndeks] == vrednost:
+        return trenutniIndeks
+    return linearna_pretraga_rekurzivno(niz, trenutniIndeks-1, vrednost)
+
+#niz = [39, 12, 18, 85, 72, 10, 2, 18]
+#print(linearna_pretraga_rekurzivno(niz, len(niz)-1, 2))
+```
+</details>
+
+
+### Бинарна претрага
+<details markdown='block'>
+<summary>Имплементација - итеративно </summary>
+
+```python
+def binarna_pretraga_iterativno(sortiraniNiz, x):
     low = 0
     high = len(niz) - 1
  
@@ -165,45 +195,49 @@ def binarna_pretraga(niz, x):
  
         mid = (high + low) // 2
  
-        # Ako je x jednako, nasli smo x, i vracamo indeks
-        if niz[mid] == x :
+        if niz[mid] == x:
             return mid
-        # Ako je x vece, ignorisi levu polovinu
+
         elif niz[mid] < x:
             low = mid + 1
  
-        # Ako je x manje, ignorisi desno polovinu
         elif niz[mid] > x:
             high = mid - 1
  
-    # Ako smo dosli dovde, u nasem nizu ne postoji x
     return -1
+
+
+#niz = [39, 12, 18, 85, 72, 10, 2, 18]
+#sortiraniNiz = sorted(niz)
+#print(sortiraniNiz)
+#print(binarna_pretraga_iterativno(sortiraniNiz, 85))
 ```
 </details>
 
 <details markdown='block'>
-<summary>Рекурзивно </summary>
+<summary>Имплементација - рекурзивно </summary>
 
 ```python
-def binarna_pretraga(niz, low, high, x):
+def binarna_pretraga_rekurzivno(sortiraniNiz, low, high, x):
  
-    # Ne postoji x 
     if low > high:
         return -1
     
     mid = (high + low) // 2
 
-
-    # Ako je x jednako, nasli smo x, i vracamo indeks
-    if niz[mid] == x:
+    if sortiraniNiz[mid] == x:
         return mid
 
-    # Ako je x vece, ignorisi levu polovinu
-    elif niz[mid] < x:
-        return binarna_pretraga(niz, mid + 1, high, x)
+    elif sortiraniNiz[mid] < x:
+        return binarna_pretraga_rekurzivno(sortiraniNiz, mid + 1, high, x)
 
-    elif niz[mid] > x:
-        return binarna_pretraga(niz, low, mid - 1, x)
+    else:
+        return binarna_pretraga_rekurzivno(sortiraniNiz, low, mid - 1, x)
+
+#niz = [39, 12, 18, 85, 72, 10, 2, 18]
+#sortiraniNiz = sorted(niz)
+#print(sortiraniNiz)
+#print(binarna_pretraga_rekurzivno(sortiraniNiz, 0, len(sortiraniNiz)-1, 12))
 ```
 </details>
 
