Додат задатак "Ротирање матрице".

--- a/вежбе/вежбе11.md
+++ b/вежбе/вежбе11.md
@@ -553,3 +553,34 @@ def setZeroes(matrix):
                 matrix[0][c]=0 
 ```
 </details>
+
+## Задатак 16
+Написати функцију која ротира матрицу за 90 степени у негативном математичком смеру (смеру казаљке на сату).
+<details markdown='block'>
+<summary>Решење </summary>
+
+```python
+def rotate(matrix):
+	left, right = 0, len(matrix[0])-1
+
+        while left < right:
+            bottom, top =right , left
+
+            for i in range(right-left):
+
+                top_right = matrix[top+i][right]
+                matrix[top+i][right] = matrix[top][left+i]
+
+                bottom_right = matrix[bottom][right-i]
+                matrix[bottom][right-i] = top_right
+
+
+                bottom_left = matrix[bottom-i][left]
+                matrix[bottom-i][left] = bottom_right
+
+                matrix[top][left+i] = bottom_left
+
+            left+=1
+            right-=1   
+```
+</details>
